<resources>
    <string name="app_name">BankApp</string>
    <string name="payBills">Pay bills</string>
    <string name="transferMoneyBetweenAccounts">Transfer between accounts</string>
    <string name="transferMoneyToOtherAccounts">Transfer to other account</string>
    <string name="DepositMoney">Deposit</string>
    <string name="AccountInViewActivity">Account</string>
    <string name="applyToNewAccount">Apply for accounts</string>
    <string name="applyForAccount">Apply for the account</string>
    <string name="depositToAccount">Deposit</string>
    <string name="depositAmount">Amount To Deposit</string>


    <!-- Transfer Money others Activity -->
    <string name="transferMoneyFrom">Transfer money from</string>
    <string name="emailOtherAccount">Email for the other person</string>
    <string name="amountToTransfer">Amount to transfer</string>
    <string name="accountBalance">Balance:&#160;</string>
    <string name="emptyFieldsTransfer">Please fill out the transfer information</string>
    <string name="invalidUser">Cannot find an account with the given email</string>
    <string name="notEnoughMoney">Not enough money on the account to transfer the money</string>
    <string name="transferMoney">Transfer money</string>

    <string-array name="applyForAccountsItems">
        <item>Choose an account to apply for</item>
        <item>Business account</item>
        <item>Savings account</item>
        <item>Pension account</item>
    </string-array>


    <!-- Accounts -->
    <string name="defaultAccount">Default Account</string>
    <string name="budgetAccount">Budget Account</string>
    <string name="businessAccount">Business Account</string>
    <string name="pensionAccount">Pension Account</string>
    <string name="savingsAccount">Savings Account</string>
    <string name="balance">&#160;Balance: &#160;&#160;&#160;&#160;&#160;&#160;$</string>
    <string name="overviewAccounts">Overview</string>

    <string name="email_login">E-Mail</string>
    <string name="login_button">Login</string>
    <string name="text_to_register_button">If you are not registered in the bank. Register instead</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="resetPassword"><u>Forgot your password?</u></string>

    <string name="SSN">SSN</string>
    <string name="Email">Email</string>
    <string name="Firstname">Firstname</string>
    <string name="Lastname">Lastname</string>
    <string name="Address">Address</string>
    <string name="Phonenumber">Phonenumber</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>

    <!-- MainActivity -->
    <string name="emailNotEmpty">Email must not be empty</string>
    <string name="emailNotValid">Email is not valid</string>
    <string name="mustBe8Characters">Must be atleast 8 characters</string>
    <string name="mustContainUppercaseLetterAndNumber">Must contain atleast one uppercase letter and a number</string>
    <string name="authenticationFailed">Authentication failed</string>
    <string name="intentUser">user</string>
    <string name="intentAccounts">accounts</string>
    <string name="intentAccount">account</string>
    <string name="pathCPHSlashUser">Copenhagen/users/</string>
    <string name="pathOdenseSlashUser">Odense/users/</string>
    <string name="authenticateUserLogin">Authenticating&#8230;</string>

    <!-- applyForAccountActivity -->
    <string name="pathUserSlash">/users/</string>
    <string name="pathAccountSlash">/accounts/</string>
    <string name="chooseAnAccount">Please choose an account</string>
    <string name="BUDGET">BUDGET</string>
    <string name="DEFAULT">DEFAULT</string>
    <string name="BUSINESS">BUSINESS</string>
    <string name="SAVINGS">SAVINGS</string>
    <string name="PENSION">PENSION</string>
    <string name="NONE">NONE</string>

    <!-- DepositActivity -->
    <string name="pathBalance">/balance</string>
    <string name="depositPositiveAmount">Make Sure you deposit a positive amount</string>
    <string name="pathSlash">/</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>

    <!-- RegisterActivity -->
    <string name="pathUser">/users</string>
    <string name="phonenumberAuth">Phonenumber must not be empty or greater or less than 8 digits</string>
    <string name="lastnameNotEmpty">Lastname must not be empty</string>
    <string name="firstnameNotEmpty">Firstname must not be empty</string>
    <string name="addressNotEmpty">Address must not be empty</string>
    <string name="ssn10Characters">SSN must be 10 characters long</string>
    <string name="allowLocation">Make sure to allow the app to use your location</string>
    <string name="copenhagen">Copenhagen</string>
    <string name="odense">Odense</string>
    <string name="nemid">NemId</string>
    <string name="verify">Verify</string>

    <!-- ResetPasswordActivity -->
    <string name="resetPasswordBTN">Reset password</string>
    <string name="resetPasswordInfo">Enter your email below, and we will send an mail with instructions</string>

    <!-- ViewAccount -->
    <string name="clicked">clicked</string>
    <string name="transfer">transfer</string>
    <string name="please_check_your_email_for_your_nemid_code">Please check your email for your NemId code</string>
    <string name="logoutbutton">LogOutButton</string>
    <string name="notOldEnough">You are not old enough to access these functions</string>
    <string name="actionsAccount">Actions</string>
    <string name="cancelledAllAutoPays">Cancelled all auto payments</string>


    <!-- PayBills -->
    <string-array name="paySpinner">
        <item>+01</item>
        <item>+04</item>
        <item>+15</item>
        <item>+71</item>
        <item>+73</item>
        <item>+75</item>
    </string-array>
    <string name="payment_id">Payment Id</string>
    <string name="payment_name">Payment Name</string>
    <string name="creditor">Creditor</string>
    <string name="emptyFieldsPayBills">Please fill out the bill information</string>
    <string name="creditorLength">Creditor must be 8 digits long</string>
    <string name="paymentIdLength">Payment Id must be 14 digits long</string>
    <string name="amountToPay">Amount to pay</string>
    <string name="checkBoxAutoPay">Transfer automatically every month</string>
    <string name="payBill">Pay bill</string>
    <string name="payFrom">Pay from</string>

    <string name="intentAutoAmount">amountToWithdraw</string>
    <string name="intentAutoNumber">numberAccountAuto</string>
    <string name="intentAffiliate">userAffiliate</string>
    <string name="intentUserAccountBalance">userAccountBalance</string>
    <string name="intentUserEmail">userEmail</string>
    <string name="cancel_payments">Cancel Payments</string>

    <!-- MonthlyPaymentsActivity -->
    <string name="monthlyPay">Monthly pay to</string>
    <string name="monthlyPayButton">Monthly pay</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string-array name="monthlyAccounts">
        <item>Budget account</item>
        <item>Savings account</item>
    </string-array>
    <string name="amountGreaterThanZero">Amount must be greater than zero</string>

    <!-- NemidActivity -->
    <string name="codeSessionRunOut">This code session has run out, sending you a new code</string>
    <string name="nemIdIncorrect">NemId is incorrect</string>
    <string name="nemIdCode">NemId Code</string>
    <string name="nemIdCodeExpires">Here is your nemId Code it expires in 10 minutes:</string>


</resources>
