<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:id="@+id/nestedScrollView"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                            tools:context=".RegisterActivity"
                                            tools:showIn="@layout/activity_register">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4">

        <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="78dp"
                android:ems="10"
                android:hint="@string/Lastname"
                android:inputType="textPersonName"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText7"/>

        <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/Phonenumber"
                android:inputType="number"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.643"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2"/>

        <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/SSN"
                android:inputType="number"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.606"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textWebEmailAddress"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="@+id/editText3"
                app:layout_constraintTop_toBottomOf="@+id/editText3"/>

        <EditText
                android:id="@+id/editText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="@+id/editText4"
                app:layout_constraintTop_toBottomOf="@+id/editText4"/>

        <EditText
                android:id="@+id/editText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/Address"
                android:inputType="textPostalAddress"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="@+id/editText5"
                app:layout_constraintTop_toBottomOf="@+id/editText5"/>

        <EditText
                android:id="@+id/editText7"
                android:layout_width="213dp"
                android:layout_height="43dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/Firstname"
                android:inputType="textPersonName"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="@+id/editText6"
                app:layout_constraintTop_toBottomOf="@+id/editText6"/>

        <Button
                android:id="@+id/button"
                android:layout_width="135dp"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/Register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.569"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                app:layout_constraintVertical_bias="0.0"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>