<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".ViewAccountActivity"
                                             android:background="@color/backgroundBLUE">

    <Button
            android:id="@+id/AccountBtn2"
            android:layout_width="379dp"
            android:layout_height="86dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/AccountInViewActivity"
            android:textAlignment="viewStart"
            android:background="@drawable/rounded_menu_buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.093" android:fontFamily="sans-serif-light" android:textSize="16sp"
            android:textColor="@color/backgroundBLUE"/>

    <Button
            android:id="@+id/transferMoneyBetweenAccountsBtn"
            android:layout_width="379dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:text="@string/transferMoneyBetweenAccounts"
            android:background="@drawable/rounded_small_buttons"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/backgroundBLUE" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.481"/>

    <Button
            android:id="@+id/transferMoneyToOtherAccountsBtn"
            android:layout_width="379dp"
            android:layout_height="52dp"
            android:text="@string/transferMoneyToOtherAccounts"
            android:background="@drawable/rounded_small_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/backgroundBLUE" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.38"/>

    <Button
            android:id="@+id/DepositBtn"
            android:layout_width="379dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/DepositMoney"
            android:background="@drawable/rounded_small_buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.586" android:textColor="@color/backgroundBLUE"/>

    <Button
            android:id="@+id/payBillsBtn"
            android:layout_width="379dp"
            android:layout_height="52dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/payBills"
            android:background="@drawable/rounded_small_buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/backgroundBLUE" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.689"/>

    <Button
            android:id="@+id/cancelBtn"
            android:layout_width="379dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel_payments"
            android:background="@drawable/rounded_small_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/backgroundBLUE" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.791"/>

    <TextView
            android:text="@string/actionsAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:fontFamily="sans-serif-thin"
            app:layout_constraintVertical_bias="0.291"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>